--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,5 @@ import:
 - package: github.com/jinzhu/gorm
   version: ~1.9.1
 - package: github.com/jinzhu/inflection
+- package: github.com/golang/protobuf
+  version: ~1.1.0
