--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,7 @@ import:
 - package: github.com/jinzhu/inflection
 - package: github.com/golang/protobuf
   version: ~1.1.0
+- package: github.com/satori/go.uuid
+  version: ~1.2.0
+- package: google.golang.org/grpc
+  version: ~1.12.2
